--- a/index.html
+++ b/index.html
@@ -436,8 +436,108 @@
         </div>
        </section>
       <!-- question part end -->
+
+      <!-- contact section starts -->
+      <section>
+        <div>
+          <div class="divider mt-24"></div> 
+        <div><h1 class=" text-center text-4xl font-extrabold ">Get In Touch</h1>
+        <p class="text-center m-auto w-[65%] text-base mt-6" >Get in touch with us for personalized assistance, inquiries, or collaboration. We're ready to connect and provide the best service.</p></div>
+        <div class="divider "></div>
+        </div>
+     <div class="flex">
+      <div><div >
+        <div class="bg-[rgba(188,237,109,0.10)] w-80 h-52 rounded-lg">
+          <div class="p-9">
+            <img src="./Images/Group 1171275317.png" alt="">
+            <p class="text-[rgba(19,19,24,0.40)] mt-6 font">Phone Number :</p>
+            <h2 class="text-black text-base font-extrabold">(+62) 123-321-543</h2>
+          </div>
+        </div>
+        <div class="bg-[rgba(253,221,95,0.10)] w-80 h-52 rounded-lg mt-6">
+          <div class="p-9">
+            <img src="./Images/Group 1171275317.png" alt="">
+            <p class="text-[rgba(19,19,24,0.40)] mt-6 font">Phone Number :</p>
+            <h2 class="text-black text-base font-extrabold">(+62) 123-321-543</h2>
+          </div>
+        </div>
+        <div class="bg-[rgba(98,156,243,0.10)] w-80 h-52 rounded-lg mt-6">
+          <div class="p-9">
+            <img src="./Images/Group 1171275317.png" alt="">
+            <p class="text-[rgba(19,19,24,0.40)] mt-6 font">Phone Number :</p>
+            <h2 class="text-black text-base font-extrabold">(+62) 123-321-543</h2>
+          </div>
+        </div>
+        </div></div>
+      <div class="grid grid-cols-2 gap-3 h-80">
+        <div>
+          <p class="text-xl font-bold mb-4">Your Name</p>
+          <input type="text" placeholder="Enter your full name" class="input input-bordered w-full max-w-xs bg-[rgba(19,19,24,0.03)]" />
+        </div>
+        <div>
+          <p class="text-xl font-bold mb-4">Your Name</p>
+          <input type="text" placeholder="Enter your full name" class="input input-bordered w-full max-w-xs bg-[rgba(19,19,24,0.03)]" />
+        </div>
+        <div>
+          <p class="text-xl font-bold mb-4">Your Name</p>
+          <input type="text" placeholder="Enter your full name" class="input input-bordered w-full max-w-xs bg-[rgba(19,19,24,0.03)]" />
+        </div>
+        <div>
+          <p class="text-xl font-bold mb-4">Your Name</p>
+          <input type="text" placeholder="Enter your full name" class="input input-bordered w-full max-w-xs bg-[rgba(19,19,24,0.03)]" />
+        </div>
+        <div>
+          <p class="text-xl font-bold mb-4">Your Name</p>
+          <input type="text" placeholder="Enter your full name" class="input input-bordered w-full max-w-xs bg-[rgba(19,19,24,0.03)]" />
+        </div>
+        </div>
+     </div>
+      </section>
+      <!-- contact section end -->
     </main>
-    <footer>
+    <footer class="m-auto bg-black text-[rgba(255,255,255,0.60)]">
+      <div class=" flex justify-evenly ">
+        <div>
+          <h1>Get In Touch</h1>
+        <p>Ready to connect? Get in touch with us for <br> inquiries, support, or <br> collaboration. We look forward to hearing from you!</p>
+        <div class="inline-flex gap-3">
+          <img src="./Images/footer (2).png" alt="">
+          <p>hockeys@support.com</p></div>
+            <br>
+        <div class="inline-flex gap-3">
+          <img src="./Images/footer (1).png" alt="">
+          <p>(+62) 123-321-543</p></div>
+      </div>
+        <div>
+          <h2>Company</h2>
+          <ul>
+          <li>About us</li>
+          <li>Leadership</li>
+          <li>Careers</li>
+          <li>News & Article</li>
+          <li>Legal Notice</li>
+          </ul>
+        </div>
+        <div>
+          <h2>Support</h2>
+          <ul>
+          <li>Help Center</li>
+          <li>FAQ</li>
+          <li>Ticket Support</li>
+          <li>Contact Us</li>
+          </ul>
+        </div>
+        <div>
+          <h2>Services</h2>
+          <ul>
+          <li>Academy</li>
+          <li>Group Lesson</li>
+          <li>Private Lesson</li>
+          <li>Hockeys for kids</li>
+          <li>Hockeys for Adult</li>
+          </ul>
+        </div>
+      </div>
     </footer>
   </body>
 </html>
