desktop part done

--- a/index.html
+++ b/index.html
@@ -158,8 +158,8 @@
     <!-- program section starts -->
     <section>
       <div class="divider mt-24"></div> 
-      <div><h1 class=" text-center text-4xl font-extrabold ">Our New Products</h1>
-      <p class="text-center m-auto w-[65%] text-base mt-6" >Explore our latest collection of innovative and high-quality products, featuring cutting-edge designs and advanced technology. Elevate your lifestyle with excellence.</p></div>
+      <div><h1 class=" text-center text-4xl font-extrabold ">Program Sections</h1>
+      <p class="text-center m-auto w-[65%] text-base mt-6" >Explore our diverse program sections designed for all skill levels. From beginner-friendly sessions to advanced training, there's something for everyone.</p></div>
       <div class="divider "></div> 
       <div class="flex gap-6 mt-20">
         <div>
@@ -205,6 +205,14 @@
       </div>
     </section>
     <!-- program section end -->
+
+
+
+    <div class="divider mt-24"></div> 
+    <div><h1 class=" text-center text-4xl font-extrabold ">Our New Products</h1>
+    <p class="text-center m-auto w-[65%] text-base mt-6" >Discover innovation and style with our new products. Unmatched quality, cutting-edge designs, and functionality—experience excellence in every detail. Elevate your lifestyle today.</p></div>
+    <div class="divider "></div> 
+
        <!-- grid part starts  -->
        <div class="grid grid-cols-2 gap-4 mt-12">
         <div class="flex border-2 rounded-2xl">
@@ -226,10 +234,10 @@
       </div>
       <h2 class="text-xl font-extrabold mt-3">World Cup Flags Football</h2>
       <p class="w-[75%] text-base font-medium">Global football celebration: Flags unite in play.</p>
-      <div class="inline-flex gap-2 mt-2">
+      <div class="inline-flex gap-2 mt-2 pb-4">
         <h2 class="text-[#FF4240] text-base font-extrabold">Price - $22.00</h2>
         <div class="inline-flex gap-1" ><img  src="./Images/cart.png" alt="">
-          <p class="text-sm font-medium w-[100%]"> Delivery Fee : Free</p></div>
+          <p class="text-sm font-medium w-[100%] "> Delivery Fee : Free</p></div>
       </div>
      </div>
     </div>
@@ -252,7 +260,7 @@
       </div>
       <h2 class="text-xl font-extrabold mt-3">World Cup Flags Football</h2>
       <p class="w-[75%] text-base font-medium">Global football celebration: Flags unite in play.</p>
-      <div class="inline-flex gap-2 mt-2">
+      <div class="inline-flex gap-2 mt-2 pb-4">
         <h2 class="text-[#FF4240] text-base font-extrabold">Price - $22.00</h2>
         <div class="inline-flex gap-1" ><img  src="./Images/cart.png" alt="">
           <p class="text-sm font-medium w-[100%]"> Delivery Fee : Free</p></div>
@@ -278,7 +286,7 @@
       </div>
       <h2 class="text-xl font-extrabold mt-3">Cap For Hockeys</h2>
       <p class="w-[75%] text-base font-medium">Global football celebration: Flags unite in play.</p>
-      <div class="inline-flex gap-2 mt-2">
+      <div class="inline-flex gap-2 mt-2 pb-4" >
         <h2 class="text-[#FF4240] text-base font-extrabold">Price - $22.00</h2>
         <div class="inline-flex gap-1" ><img  src="./Images/cart.png" alt="">
           <p class="text-sm font-medium w-[100%]"> Delivery Fee : Free</p></div>
@@ -304,7 +312,7 @@
       </div>
       <h2 class="text-xl font-extrabold mt-3">World Cup Flags Football</h2>
       <p class="w-[75%] text-base font-medium">Global football celebration: Flags unite in play.</p>
-      <div class="inline-flex gap-2 mt-2">
+      <div class="inline-flex gap-2 mt-2 pb-4">
         <h2 class="text-[#FF4240] text-base font-extrabold">Price - $22.00</h2>
         <div class="inline-flex gap-1" ><img  src="./Images/cart.png" alt="">
           <p class="text-sm font-medium w-[100%]"> Delivery Fee : Free</p></div>
@@ -330,7 +338,7 @@
       </div>
       <h2 class="text-xl font-extrabold mt-3">World Cup Flags Football</h2>
       <p class="w-[75%] text-base font-medium">Global football celebration: Flags unite in play.</p>
-      <div class="inline-flex gap-2 mt-2">
+      <div class="inline-flex gap-2 mt-2 pb-4">
         <h2 class="text-[#FF4240] text-base font-extrabold">Price - $22.00</h2>
         <div class="inline-flex gap-1" ><img  src="./Images/cart.png" alt="">
           <p class="text-sm font-medium w-[100%]"> Delivery Fee : Free</p></div>
@@ -356,7 +364,7 @@
       </div>
       <h2 class="text-xl font-extrabold mt-3">World Cup Flags Football</h2>
       <p class="w-[75%] text-base font-medium">Global football celebration: Flags unite in play.</p>
-      <div class="inline-flex gap-2 mt-2">
+      <div class="inline-flex gap-2 mt-2 pb-4">
         <h2 class="text-[#FF4240] text-base font-extrabold">Price - $22.00</h2>
         <div class="inline-flex gap-1" ><img  src="./Images/cart.png" alt="">
           <p class="text-sm font-medium w-[100%]"> Delivery Fee : Free</p></div>
@@ -380,8 +388,17 @@
           <div class="join join-vertical w-full  rounded-none">
           <div class="collapse collapse-plus join-item border-t-2 rounded-none border-base-300">
             <input type="radio" name="my-accordion-4" checked="checked" /> 
-            <div class="collapse-title text-xl font-medium">
-              Click to open this one and close others
+            <div class="collapse-title text-xl font-bold">
+              Our Equipment
+            </div>
+            <div class="collapse-content"> 
+              <p>Our equipment is top-tier, ensuring peak performance and safety. From cutting-edge gear to reliable tools, we prioritize excellence and innovation.</p>
+            </div>
+          </div>
+          <div class="collapse collapse-plus join-item border-t-2 rounded-none border-base-300">
+            <input type="radio" name="my-accordion-4"  /> 
+            <div class="collapse-title text-xl font-bold">
+              Hockey Training
             </div>
             <div class="collapse-content"> 
               <p>hello</p>
@@ -389,17 +406,8 @@
           </div>
           <div class="collapse collapse-plus join-item border-t-2 rounded-none border-base-300">
             <input type="radio" name="my-accordion-4"  /> 
-            <div class="collapse-title text-xl font-medium">
-              Click to open this one and close others
-            </div>
-            <div class="collapse-content"> 
-              <p>hello</p>
-            </div>
-          </div>
-          <div class="collapse collapse-plus join-item border-t-2 rounded-none border-base-300">
-            <input type="radio" name="my-accordion-4"  /> 
-            <div class="collapse-title text-xl font-medium">
-              Click to open this one and close others
+            <div class="collapse-title text-xl font-bold">
+              Private Lessons
             </div>
             <div class="collapse-content"> 
               <p>hello</p>
@@ -407,8 +415,8 @@
           </div>
           <div class="collapse collapse-plus join-item border-t-2 rounded-none border-base-300">
             <input type="radio" name="my-accordion-4" /> 
-            <div class="collapse-title text-xl font-medium">
-              Click to open this one and close others
+            <div class="collapse-title text-xl font-bold">
+              Ski Touring
             </div>
             <div class="collapse-content"> 
               <p>hello</p>
@@ -416,8 +424,8 @@
           </div>
           <div class="collapse collapse-plus join-item border-t-2 rounded-none border-base-300">
             <input type="radio" name="my-accordion-4"  /> 
-            <div class="collapse-title text-xl font-medium">
-              Click to open this one and close others
+            <div class="collapse-title text-xl font-bold">
+              Booking
             </div>
             <div class="collapse-content"> 
               <p>hello</p>
@@ -425,8 +433,8 @@
           </div>
           <div class="collapse collapse-plus join-item border-t-2 rounded-none border-base-300">
             <input type="radio" name="my-accordion-4"  /> 
-            <div class="collapse-title text-xl font-medium">
-              Click to open this one and close others
+            <div class="collapse-title text-xl font-bold">
+              Pricings
             </div>
             <div class="collapse-content"> 
               <p>hello</p>
@@ -445,8 +453,9 @@
         <p class="text-center m-auto w-[65%] text-base mt-6" >Get in touch with us for personalized assistance, inquiries, or collaboration. We're ready to connect and provide the best service.</p></div>
         <div class="divider "></div>
         </div>
-     <div class="flex">
-      <div><div >
+     <div class="flex gap-10 mt-12">
+      <div>
+        <div class="pborder-2" >
         <div class="bg-[rgba(188,237,109,0.10)] w-80 h-52 rounded-lg">
           <div class="p-9">
             <img src="./Images/Group 1171275317.png" alt="">
@@ -456,61 +465,75 @@
         </div>
         <div class="bg-[rgba(253,221,95,0.10)] w-80 h-52 rounded-lg mt-6">
           <div class="p-9">
-            <img src="./Images/Group 1171275317.png" alt="">
-            <p class="text-[rgba(19,19,24,0.40)] mt-6 font">Phone Number :</p>
-            <h2 class="text-black text-base font-extrabold">(+62) 123-321-543</h2>
+            <img src="./Images/Group 1171275318.png" alt="">
+            <p class="text-[rgba(19,19,24,0.40)] mt-6 font">Email :</p>
+            <h2 class="text-black text-base font-extrabold">hockeys@support.com</h2>
           </div>
         </div>
         <div class="bg-[rgba(98,156,243,0.10)] w-80 h-52 rounded-lg mt-6">
           <div class="p-9">
-            <img src="./Images/Group 1171275317.png" alt="">
-            <p class="text-[rgba(19,19,24,0.40)] mt-6 font">Phone Number :</p>
-            <h2 class="text-black text-base font-extrabold">(+62) 123-321-543</h2>
+            <img src="./Images/Group 1171275321.png" alt="">
+            <p class="text-[rgba(19,19,24,0.40)] mt-6 font">Location : </p>
+            <h2 class="text-black text-base font-extrabold">152/1 Mohakhali Wireless Gate</h2>
           </div>
         </div>
-        </div></div>
-      <div class="grid grid-cols-2 gap-3 h-80">
+        </div>
+      </div>
+      <div class=" grid grid-cols-2 gap-6 h-80">
         <div>
           <p class="text-xl font-bold mb-4">Your Name</p>
-          <input type="text" placeholder="Enter your full name" class="input input-bordered w-full max-w-xs bg-[rgba(19,19,24,0.03)]" />
+          <input type="text" placeholder="Enter your full name" class="input input-bordered w-full max-w-xs bg-[rgba(19,19,24,0.03)] pr-28 " />
         </div>
         <div>
-          <p class="text-xl font-bold mb-4">Your Name</p>
-          <input type="text" placeholder="Enter your full name" class="input input-bordered w-full max-w-xs bg-[rgba(19,19,24,0.03)]" />
+          <p class="text-xl font-bold mb-4">Your Email</p>
+          <input type="text" placeholder="Enter your email" class="input input-bordered w-full max-w-xs bg-[rgba(19,19,24,0.03)] pr-28 " />
         </div>
         <div>
-          <p class="text-xl font-bold mb-4">Your Name</p>
-          <input type="text" placeholder="Enter your full name" class="input input-bordered w-full max-w-xs bg-[rgba(19,19,24,0.03)]" />
+          <p class="text-xl font-bold mb-4">Subject</p>
+          <input type="text" placeholder="Enter your subject" class="input input-bordered w-full max-w-xs bg-[rgba(19,19,24,0.03)] pr-28 " />
         </div>
         <div>
-          <p class="text-xl font-bold mb-4">Your Name</p>
-          <input type="text" placeholder="Enter your full name" class="input input-bordered w-full max-w-xs bg-[rgba(19,19,24,0.03)]" />
+          <p class="text-xl font-bold mb-4">Phone Number</p>
+          <input type="text" placeholder="Enter your phone number" class="input input-bordered w-full max-w-xs bg-[rgba(19,19,24,0.03)] pr-28 " />
         </div>
-        <div>
-          <p class="text-xl font-bold mb-4">Your Name</p>
-          <input type="text" placeholder="Enter your full name" class="input input-bordered w-full max-w-xs bg-[rgba(19,19,24,0.03)]" />
+        <div class="col-span-full">
+          <p class="text-xl font-bold mb-4">Message</p>
+          <textarea class=" bg-[rgba(19,19,24,0.03)] pt-4 pl-4 border-2 rounded-xl w-[41rem] h-[20rem]" id="message" name="message" placeholder="Write your message" rows="4" required></textarea>
         </div>
+        <div class="col-span-full">
+          <a class="btn bg-[#FF4240] text-xl text-white border-none w-[41rem] "> Send Message </a>
         </div>
+        
+        </div>
+        
      </div>
       </section>
       <!-- contact section end -->
+
+      <!-- social section start -->
+      <section class=" max-w-screen-lg m-auto bg-[rgba(19,19,24,0.03)] mt-12 rounded-lg h-40 flex flex-col items-center justify-center space-y-5">
+          <h1 class="text-2xl font-extrabold text-center">Social Media</h1>
+          <img  src="./Images/Social.png" alt="">
+      </section>
+      <!-- social section end -->
     </main>
-    <footer class="m-auto bg-black text-[rgba(255,255,255,0.60)]">
-      <div class=" flex justify-evenly ">
+    <footer class="m-auto bg-black text-[rgba(255,255,255,0.60)] mt-24 h-[30rem]">
+     <div  class=" max-w-screen-lg m-auto">
+      <div class=" flex justify-between  ">
         <div>
-          <h1>Get In Touch</h1>
-        <p>Ready to connect? Get in touch with us for <br> inquiries, support, or <br> collaboration. We look forward to hearing from you!</p>
-        <div class="inline-flex gap-3">
+          <h1 class="text-3xl font-extrabold text-white mt-24">Get In Touch</h1>
+        <p class="mt-4">Ready to connect? Get in touch with <br> us for inquiries, support, or <br> collaboration. We look forward to <br> hearing from you!</p>
+        <div class="inline-flex gap-3 mt-6">
           <img src="./Images/footer (2).png" alt="">
-          <p>hockeys@support.com</p></div>
+          <p class=" text-white">hockeys@support.com</p></div>
             <br>
-        <div class="inline-flex gap-3">
+        <div class="inline-flex gap-3 mt-4">
           <img src="./Images/footer (1).png" alt="">
-          <p>(+62) 123-321-543</p></div>
+          <p class=" text-white">(+62) 123-321-543</p></div>
       </div>
-        <div>
-          <h2>Company</h2>
-          <ul>
+        <div >
+          <h2 class="text-3xl font-extrabold text-white mt-24">Company</h2>
+          <ul class="mt-7 space-y-4">
           <li>About us</li>
           <li>Leadership</li>
           <li>Careers</li>
@@ -519,8 +542,8 @@
           </ul>
         </div>
         <div>
-          <h2>Support</h2>
-          <ul>
+          <h2 class="text-3xl font-extrabold text-white mt-24">Support</h2>
+          <ul class="mt-7 space-y-4">
           <li>Help Center</li>
           <li>FAQ</li>
           <li>Ticket Support</li>
@@ -528,8 +551,8 @@
           </ul>
         </div>
         <div>
-          <h2>Services</h2>
-          <ul>
+          <h2 class="text-3xl font-extrabold text-white mt-24">Services</h2>
+          <ul class="mt-7 space-y-4">
           <li>Academy</li>
           <li>Group Lesson</li>
           <li>Private Lesson</li>
@@ -538,6 +561,7 @@
           </ul>
         </div>
       </div>
+     </div>
     </footer>
   </body>
 </html>
