--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       <!-- navbar-end -->
 
       <!-- carousel starts-->
-      <div class="carousel w-full mt-12 hidden">
+      <div class="carousel w-full mt-12">
         <div id="slide1" class="carousel-item relative w-full rounded-xl bg-cover bg-[linear-gradient(45deg,rgba(0,0,0,0.4),rgba(0,0,0,0.1)),url(./images/1.png)] h-[50vh] ">
          <div> <div class="w-[502px] h-[140px] bg-black text-white rounded-2xl p-4 transform translate-x-[490px] translate-y-[300px]">
           <h2 class="w-[90%] text-2xl font-extrabold">Meet all the heroes from the field</h2>
