--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
       <!-- carousel starts-->
       <div class="carousel w-full mt-12">
-        <div id="slide1" class="carousel-item relative w-full rounded-xl bg-cover bg-[linear-gradient(45deg,rgba(0,0,0,0.4),rgba(0,0,0,0.1)),url(./images/1.png)] h-[50vh] ">
+        <div id="slide1" class="carousel-item relative w-full rounded-xl bg-cover bg-[linear-gradient(45deg,rgba(0,0,0,0.4),rgba(0,0,0,0.1)),url('./images/1.png')] h-[50vh] ">
          <div> <div class="w-[502px] h-[140px] bg-black text-white rounded-2xl p-4 transform translate-x-[490px] translate-y-[300px]">
           <h2 class="w-[90%] text-2xl font-extrabold">Meet all the heroes from the field</h2>
         <p class="mt-4">Encounter field heroes, where passion and skill collide, creating inspiring tales of sportsmanship and triumph on display</p>
@@ -98,7 +98,7 @@
             <a href="#slide2" class="btn btn-circle">❯</a>
           </div>
         </div> 
-        <div id="slide2" class=" carousel-item relative w-full rounded-xl bg-cover bg-[linear-gradient(45deg,rgba(0,0,0,0.4),rgba(0,0,0,0.1)),url(./images/4.png)] h-[50vh] ">
+        <div id="slide2" class=" carousel-item relative w-full rounded-xl bg-cover bg-[linear-gradient(45deg,rgba(0,0,0,0.4),rgba(0,0,0,0.1)),url('./images/4.png')] h-[50vh] ">
          <div class="flex justify-center">
           <div>
              <div class="w-[502px] h-[140px] bg-black text-white rounded-2xl p-4 transform translate-x-[490px] translate-y-[300px]">
@@ -216,8 +216,8 @@
     <div class="divider "></div> 
 
        <!-- grid part starts  -->
-       <div class="grid lg:grid-cols-2 lg:gap-4 gap-4 mt-12">
-        <div class="flex border-2 rounded-2xl w-[90%] m-auto">
+       <div class="grid lg:grid-cols-2 lg:gap-4 gap-4 mt-12 w-[90%] lg:w-full m-auto">
+        <div class="flex border-2 rounded-2xl ">
         <div class="m-auto w-[50%]">
           <img class="ml-6 w-[80%] " src="./Images/5.png" alt="">
         </div>
