--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
       <div>
         <div>
           <div class="card lg:w-[100%] w-[90%] bg-base-100 shadow-xl image-full m-auto">
-          <figure><img src="./Images/3.png" alt="Shoes" /></figure>
+          <figure><img src="./images/" alt="Shoes" /></figure>
           <div class="card-body mt-12">
             <h2 class="text-3xl text-white font-extrabold">Junior Program</h2>
             <p class=" text-white text-base">Nurturing young talents through a comprehensive junior program, fostering skills, teamwork, and a passion for the sport. Join the journey!</p>
