responsive halfway done

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
     <!-- program section starts -->
     <section>
       <div class="divider mt-24"></div> 
-      <div><h1 class=" text-center text-3xl lg:text-4xl font-extrabold ">Program Sections</h1>
+      <div><h1 class=" lg:block sm:block text-center text-2xl lg:text-4xl sm:text-base font-extrabold ">Program Sections</h1>
       <p class="text-center m-auto w-[65%] text-base mt-6" >Explore our diverse program sections designed for all skill levels. From beginner-friendly sessions to advanced training, there's something for everyone.</p></div>
       <div class="divider "></div> 
       <div class="flex lg:gap-6 lg:mt-20 flex-col lg:flex-row gap-6 ">
@@ -179,7 +179,7 @@
       <div>
         <div>
           <div class="card lg:w-[100%] w-[90%] bg-base-100 shadow-xl image-full m-auto">
-          <figure><img src="./images/" alt="Shoes" /></figure>
+          <figure><img src="./images/3.png" alt="Shoes" /></figure>
           <div class="card-body mt-12">
             <h2 class="text-3xl text-white font-extrabold">Junior Program</h2>
             <p class=" text-white text-base">Nurturing young talents through a comprehensive junior program, fostering skills, teamwork, and a passion for the sport. Join the journey!</p>
@@ -211,17 +211,17 @@
 
 
     <div class="divider lg:mt-24 mt-9"></div> 
-    <div><h1 class=" text-center text-4xl font-extrabold ">Our New Products</h1>
+    <div><h1 class=" lg:block sm:block text-center text-2xl lg:text-4xl sm:text-base font-extrabold ">Our New Products</h1>
     <p class="text-center m-auto w-[65%] text-base mt-6" >Discover innovation and style with our new products. Unmatched quality, cutting-edge designs, and functionality—experience excellence in every detail. Elevate your lifestyle today.</p></div>
     <div class="divider "></div> 
 
        <!-- grid part starts  -->
        <div class="grid lg:grid-cols-2 lg:gap-4 gap-4 mt-12 w-[90%] lg:w-full m-auto">
-        <div class="flex border-2 rounded-2xl ">
-        <div class="m-auto w-[50%]">
-          <img class="ml-6 w-[80%] " src="./Images/5.png" alt="">
+        <div class="flex border-2 rounded-2xl flex-col lg:flex-row ">
+        <div class="m-auto w-[100%] lg:w-[50%] mt-6 lg:mt-auto">
+          <img class=" m-auto lg:ml-6 lg:w-[80%] w-[85%] " src="./Images/5.png" alt="shirt">
         </div>
-      <div>
+      <div class="ml-9 lg:ml-0">
         <div class="inline-flex gap-2 mt-6"  >
         <img  src="./Images/Frame.png" alt="">
         <p class="pr-3">5.0</p>
@@ -236,18 +236,18 @@
       </div>
       <h2 class="text-xl font-extrabold mt-3">World Cup Flags Football</h2>
       <p class="w-[75%] text-base font-medium">Global football celebration: Flags unite in play.</p>
-      <div class="inline-flex gap-2 mt-2 pb-4">
+      <div class="lg:inline-flex gap-2 mt-2 pb-4 space-y-3">
         <h2 class="text-[#FF4240] text-base font-extrabold">Price - $22.00</h2>
         <div class="inline-flex gap-1" ><img  src="./Images/cart.png" alt="">
           <p class="text-sm font-medium w-[100%] "> Delivery Fee : Free</p></div>
       </div>
      </div>
     </div>
-        <div class="flex border-2 rounded-2xl">
-        <div class="m-auto w-[50%]">
-          <img class="ml-6 w-[80%] " src="./Images/6.png" alt="">
+        <div class="flex border-2 rounded-2xl flex-col lg:flex-row ">
+        <div class="m-auto w-[100%] lg:w-[50%] mt-6 lg:mt-auto">
+          <img class="m-auto lg:ml-6 lg:w-[80%] w-[85%] " src="./Images/6.png" alt="">
         </div>
-      <div>
+      <div class="ml-9 lg:ml-0">
         <div class="inline-flex gap-2 mt-6"  >
         <img  src="./Images/Frame.png" alt="">
         <p class="pr-3">5.0</p>
@@ -262,18 +262,18 @@
       </div>
       <h2 class="text-xl font-extrabold mt-3">World Cup Flags Football</h2>
       <p class="w-[75%] text-base font-medium">Global football celebration: Flags unite in play.</p>
-      <div class="inline-flex gap-2 mt-2 pb-4">
+      <div class="lg:inline-flex gap-2 mt-2 pb-4 space-y-3">
         <h2 class="text-[#FF4240] text-base font-extrabold">Price - $22.00</h2>
         <div class="inline-flex gap-1" ><img  src="./Images/cart.png" alt="">
           <p class="text-sm font-medium w-[100%]"> Delivery Fee : Free</p></div>
       </div>
      </div>
     </div>
-        <div class="flex border-2 rounded-2xl">
-        <div class="m-auto w-[50%]">
-          <img class="ml-6 w-[80%] " src="./Images/7.png" alt="">
+        <div class="flex border-2 rounded-2xl flex-col lg:flex-row ">
+        <div class="m-auto w-[100%] lg:w-[50%] mt-6 lg:mt-auto">
+          <img class="m-auto lg:ml-6 lg:w-[80%] w-[85%]" src="./Images/7.png" alt="">
         </div>
-      <div>
+      <div class="ml-9 lg:ml-0">
         <div class="inline-flex gap-2 mt-6"  >
         <img  src="./Images/Frame.png" alt="">
         <p class="pr-3">5.0</p>
@@ -288,18 +288,18 @@
       </div>
       <h2 class="text-xl font-extrabold mt-3">Cap For Hockeys</h2>
       <p class="w-[75%] text-base font-medium">Global football celebration: Flags unite in play.</p>
-      <div class="inline-flex gap-2 mt-2 pb-4" >
+      <div class="lg:inline-flex gap-2 mt-2 pb-4 space-y-3" >
         <h2 class="text-[#FF4240] text-base font-extrabold">Price - $22.00</h2>
         <div class="inline-flex gap-1" ><img  src="./Images/cart.png" alt="">
           <p class="text-sm font-medium w-[100%]"> Delivery Fee : Free</p></div>
       </div>
      </div>
     </div>
-        <div class="flex border-2 rounded-2xl">
-        <div class="m-auto w-[50%]">
-          <img class="ml-6 w-[80%] " src="./Images/8.png" alt="">
+        <div class="flex border-2 rounded-2xl flex-col lg:flex-row ">
+        <div class="m-auto w-[100%] lg:w-[50%] mt-6 lg:mt-auto">
+          <img class="m-auto lg:ml-6 lg:w-[80%] w-[85%] " src="./Images/8.png" alt="">
         </div>
-      <div>
+      <div class="ml-9 lg:ml-0">
         <div class="inline-flex gap-2 mt-6"  >
         <img  src="./Images/Frame.png" alt="">
         <p class="pr-3">5.0</p>
@@ -314,18 +314,18 @@
       </div>
       <h2 class="text-xl font-extrabold mt-3">World Cup Flags Football</h2>
       <p class="w-[75%] text-base font-medium">Global football celebration: Flags unite in play.</p>
-      <div class="inline-flex gap-2 mt-2 pb-4">
+      <div class="lg:inline-flex gap-2 mt-2 pb-4 space-y-3">
         <h2 class="text-[#FF4240] text-base font-extrabold">Price - $22.00</h2>
         <div class="inline-flex gap-1" ><img  src="./Images/cart.png" alt="">
           <p class="text-sm font-medium w-[100%]"> Delivery Fee : Free</p></div>
       </div>
      </div>
     </div>
-        <div class="flex border-2 rounded-2xl">
-        <div class="m-auto w-[50%]">
-          <img class="ml-6 w-[80%] " src="./Images/9.png" alt="">
+        <div class="flex border-2 rounded-2xl flex-col lg:flex-row ">
+        <div class="m-auto w-[100%] lg:w-[50%] mt-6 lg:mt-auto">
+          <img class="m-auto lg:ml-6 lg:w-[80%] w-[85%] " src="./Images/9.png" alt="">
         </div>
-      <div>
+      <div class="ml-9 lg:ml-0">
         <div class="inline-flex gap-2 mt-6"  >
         <img  src="./Images/Frame.png" alt="">
         <p class="pr-3">5.0</p>
@@ -340,18 +340,18 @@
       </div>
       <h2 class="text-xl font-extrabold mt-3">World Cup Flags Football</h2>
       <p class="w-[75%] text-base font-medium">Global football celebration: Flags unite in play.</p>
-      <div class="inline-flex gap-2 mt-2 pb-4">
+      <div class="lg:inline-flex gap-2 mt-2 pb-4 space-y-3">
         <h2 class="text-[#FF4240] text-base font-extrabold">Price - $22.00</h2>
         <div class="inline-flex gap-1" ><img  src="./Images/cart.png" alt="">
           <p class="text-sm font-medium w-[100%]"> Delivery Fee : Free</p></div>
       </div>
      </div>
     </div>
-        <div class="flex border-2 rounded-2xl">
-        <div class="m-auto w-[50%]">
-          <img class="ml-6 w-[80%] " src="./Images/10.png" alt="">
+        <div class="flex border-2 rounded-2xl flex-col lg:flex-row ">
+        <div class="m-auto w-[100%] lg:w-[50%] mt-6 lg:mt-auto">
+          <img class="m-auto lg:ml-6 lg:w-[80%] w-[85%] " src="./Images/10.png" alt="">
         </div>
-      <div>
+      <div class="ml-9 lg:ml-0">
         <div class="inline-flex gap-2 mt-6"  >
         <img  src="./Images/Frame.png" alt="">
         <p class="pr-3">5.0</p>
@@ -360,13 +360,13 @@
         <img src="./Images/Frame (1).png" alt="">
         <p class="pr-3">5.0</p>
       </div>
-        <div class="inline-flex gap-2 ">
+        <div class=" inline-flex gap-2 ">
         <img src="./Images/Frame (2).png" alt="">
         <p >5.0</p>
       </div>
       <h2 class="text-xl font-extrabold mt-3">World Cup Flags Football</h2>
       <p class="w-[75%] text-base font-medium">Global football celebration: Flags unite in play.</p>
-      <div class="inline-flex gap-2 mt-2 pb-4">
+      <div class="lg:inline-flex gap-2 mt-2 pb-4 space-y-3">
         <h2 class="text-[#FF4240] text-base font-extrabold">Price - $22.00</h2>
         <div class="inline-flex gap-1" ><img  src="./Images/cart.png" alt="">
           <p class="text-sm font-medium w-[100%]"> Delivery Fee : Free</p></div>
@@ -382,11 +382,11 @@
         <p class="text-center m-auto w-[65%] text-base mt-6" >Have questions? Our dedicated client support team is here to assist you promptly with any inquiries or concerns you have</p></div>
         <div class="divider "></div>
 
-        <div class="flex gap-8 p-6 border-2 rounded-xl">
+        <div class="flex gap-8 p-6 border-2 rounded-xl flex-col lg:flex-row">
           <div >
-            <img src="./Images/11.png" alt="">
+            <img src="./images/11.png" alt="question mark">
           </div>
-         <div class="w-[60%]">
+         <div class="lg:w-[60%] w-[100%]">
           <div class="join join-vertical w-full  rounded-none">
           <div class="collapse collapse-plus join-item border-t-2 rounded-none border-base-300">
             <input type="radio" name="my-accordion-4" checked="checked" /> 
@@ -448,7 +448,7 @@
       <!-- question part end -->
 
       <!-- contact section starts -->
-      <section>
+      <section class="hidden">
         <div>
           <div class="divider mt-24"></div> 
         <div><h1 class=" text-center text-4xl font-extrabold ">Get In Touch</h1>
@@ -456,7 +456,7 @@
         <div class="divider "></div>
         </div>
      <div class="flex gap-10 mt-12">
-      <div>
+      <div >
         <div class="pborder-2" >
         <div class="bg-[rgba(188,237,109,0.10)] w-80 h-52 rounded-lg">
           <div class="p-9">
