--- a/index.html
+++ b/index.html
@@ -448,16 +448,16 @@
       <!-- question part end -->
 
       <!-- contact section starts -->
-      <section class="hidden">
+      <section >
         <div>
           <div class="divider mt-24"></div> 
         <div><h1 class=" text-center text-4xl font-extrabold ">Get In Touch</h1>
         <p class="text-center m-auto w-[65%] text-base mt-6" >Get in touch with us for personalized assistance, inquiries, or collaboration. We're ready to connect and provide the best service.</p></div>
         <div class="divider "></div>
         </div>
-     <div class="flex gap-10 mt-12">
-      <div >
-        <div class="pborder-2" >
+     <div class="flex gap-10 mt-12 flex-col lg:flex-row">
+      <div class="m-auto">
+        <div class="p-8 border-2 rounded-xl" >
         <div class="bg-[rgba(188,237,109,0.10)] w-80 h-52 rounded-lg">
           <div class="p-9">
             <img src="./Images/Group 1171275317.png" alt="">
@@ -481,7 +481,7 @@
         </div>
         </div>
       </div>
-      <div class=" grid grid-cols-2 gap-6 h-80">
+      <div class=" grid lg:grid-cols-2 gap-6 lg:h-80 ml-12 lg:ml-0">
         <div>
           <p class="text-xl font-bold mb-4">Your Name</p>
           <input type="text" placeholder="Enter your full name" class="input input-bordered w-full max-w-xs bg-[rgba(19,19,24,0.03)] pr-28 " />
@@ -500,10 +500,10 @@
         </div>
         <div class="col-span-full">
           <p class="text-xl font-bold mb-4">Message</p>
-          <textarea class=" bg-[rgba(19,19,24,0.03)] pt-4 pl-4 border-2 rounded-xl w-[41rem] h-[20rem]" id="message" name="message" placeholder="Write your message" rows="4" required></textarea>
+          <textarea class=" bg-[rgba(19,19,24,0.03)] pt-4 pl-4 border-2 rounded-xl lg:w-[37.5rem] lg:h-[20rem] h-[15rem] w-[20rem]" id="message" name="message" placeholder="Write your message" rows="4" required></textarea>
         </div>
         <div class="col-span-full">
-          <a class="btn bg-[#FF4240] text-xl text-white border-none w-[41rem] "> Send Message </a>
+          <a class="btn bg-[#FF4240] text-xl text-white border-none lg:w-[37.69rem] w-[20rem] "> Send Message </a>
         </div>
         
         </div>
@@ -513,7 +513,7 @@
       <!-- contact section end -->
 
       <!-- social section start -->
-      <section class=" max-w-screen-lg m-auto bg-[rgba(19,19,24,0.03)] mt-12 rounded-lg h-40 flex flex-col items-center justify-center space-y-5">
+      <section class=" max-w-screen-lg m-auto bg-[rgba(19,19,24,0.03)] mt-12 rounded-lg h-40 w-[95%] lg:w-full flex flex-col items-center justify-center space-y-5">
           <h1 class="text-2xl font-extrabold text-center">Social Media</h1>
           <img  src="./Images/Social.png" alt="">
       </section>
